# linear-arithmetic

./: CHANGELOG.md  linear-arithmetic.cabal  readme.md
src/Arithmetic/: Expr.hs  NatExpr.hs  Prop.hs  Relation.hs
src/Arithmetic/Prop/: Cnf.hs  Conjunction.hs  Dnf.hs
src/Arithmetic/Relation/: Idl.hs
test/: Test.hs
