cabal-version: 3.0
name:                linear-arithmetic
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Arithmetic.Expr
    Arithmetic.Prop
    Arithmetic.Prop.Conjunction
    Arithmetic.Prop.Cnf
    Arithmetic.Relation
    Arithmetic.Relation.Idl
  build-depends:
    , base >=4.12 && <5
    , primitive
    , containers
    , contiguous >=0.6.4
    , transformers >=0.5.6
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
      base
    , contiguous
    , primitive
    , vector
    , tasty
    , tasty-hunit
    , linear-arithmetic
  default-language: Haskell2010
  ghc-options: -O2 -Wall
